--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-e<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="fr">
 <head>
   <meta charset="utf-8" />
@@ -32,7 +32,6 @@ e<!DOCTYPE html>
     }
     .hero-pic {
       flex: 0 0 auto;
- 
       /* Increase the hero portrait size for better visibility */
       max-width: 200px;
       margin-left: 1rem;
@@ -66,8 +65,7 @@ e<!DOCTYPE html>
 
     /* Styles for embedded Google Form contact section */
         /* Styles for custom contact form */
-       
-    .contact-form {
+        .contact-form {
           background-color: var(--surface);
           padding: 1rem;
           border-radius: 8px;
@@ -180,7 +178,7 @@ e<!DOCTYPE html>
     <section class="hero container">
       <div class="hero-text">
         <!-- Updated hero heading to remove the first‑person phrasing and use full name -->
-        <h1><span class="accent">Tristan Mendès France</span></h1>
+        <h1><span class="accent">Tristan Mendès France</span></h1>
         <!-- Neutral tagline describing areas of expertise -->
     <!-- Neutral tagline describing areas of expertise split across two lines -->
     <p class="lead">Spécialiste des cultures numériques et des radicalités en ligne.</p>
@@ -205,12 +203,10 @@ e<!DOCTYPE html>
           <path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854zm4.943 12.248V6.169H2.542v7.225zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248S2.4 3.226 2.4 3.934c0 .694.521 1.248 1.327 1.248zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016l.016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225z" />
         </svg>
       </a>
-      <a href="https://x.com/tristanmf" target="_blank" rel="noopener" aria-label="X
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
-        <path d="M12.6 .75h2.454l-5.36 6.142L16 15.25h-4.937l-3.867-5.07-4.425 5.07H.316l5.733-6.57L0 .75h5.063l3.495 4.633L12.601 .75Zm-.86 13.028h1.36L4.323 2.145H2.865z"/>
-      </svg>
-    </a>
-
+      <a href="https://x.com/tristanmf" target="_blank" rel="noopener" aria-label="Twitter">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
+          <path d="M5.026 15c6.038 0 9.341-5.003 9.341-9.334q.002-.211-.006-.422A6.7 6.7 0 0 0 16 3.542a6.7 6.7 0 0 1-1.889.518 3.3 3.3 0 0 0 1.447-1.817 6.5 6.5 0 0 1-2.087.793A3.286 3.286 0 0 0 7.875 6.03a9.32 9.32 0 0 1-6.767-3.429 3.29 3.29 0 0 0 1.018 4.382A3.3 3.3 0 0 1 .64 6.575v.045a3.29 3.29 0 0 0 2.632 3.218 3.2 3.2 0 0 1-.865.115 3 3 0 0 1-.614-.057 3.28 3.28 0 0 0 3.067 2.277A6.6 6.6 0 0 1 .78 13.58a6 6 0 0 1-.78-.045A9.34 9.34 0 0 0 5.026 15" />
+        </svg>
       </a>
       <a href="https://bsky.app/profile/tmf.bsky.social" target="_blank" rel="noopener" aria-label="Bluesky">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
@@ -227,7 +223,7 @@ e<!DOCTYPE html>
     <section id="apropos" class="container section about-section">
       <h2>À propos</h2>
       <p>
-        Tristan Mendès France est maître de conférences associé en cultures numériques à l’Université de Paris et enseignant au CELSA. Spécialiste des cultures numériques et des radicalités en ligne, il coanime le podcast « Complorama » sur France Info, collabore à l’Observatoire du conspirationnisme (Conspiracy Watch) et participe à l’émission « Les Déconspirateurs ». Conférencier et consultant, il intervient sur l’impact du numérique et de l’intelligence artificielle, ainsi que sur l’extrémisme en ligne, et peut être contacté pour des interventions.
+        Tristan Mendès France est maître de conférences associé en cultures numériques à l’Université de Paris et enseignant au CELSA. Spécialiste des cultures numériques et des radicalités en ligne, il coanime le podcast « Complorama » sur France Info, collabore à l’Observatoire du conspirationnisme (Conspiracy Watch) et participe à l’émission « Les Déconspirateurs ». Conférencier et consultant, il intervient sur l’impact du numérique et de l’intelligence artificielle, ainsi que sur l’extrémisme en ligne, et peut être contacté pour des interventions.
       </p>
     </section>
 
@@ -261,32 +257,32 @@ e<!DOCTYPE html>
           <p>Site de l’Observatoire du conspirationnisme, qui édite Conspiracy&nbsp;Watch et décrypte l’actualité de la complosphère.</p>
           <a class="link" href="https://www.conspiracywatch.info" target="_blank" rel="noopener">Explorer&nbsp;→</a>
         </article>
-        <!-- Les Déconspirateurs card -->
+        <!-- Les Déconspirateurs card -->
         <article class="card">
           <a href="https://www.youtube.com/playlist?list=PLjzrEyZoLrso6n-zhX1NCFx4RM1GX_YVz" target="_blank" rel="noopener">
-            <img src="deconspirateur.jpg" alt="Les Déconspirateurs" />
+            <img src="deconspirateur.jpg" alt="Les Déconspirateurs" />
           </a>
-          <h3>Les Déconspirateurs</h3>
+          <h3>Les Déconspirateurs</h3>
           <p>Émission YouTube qui analyse le phénomène de la complosphère et déconstruit les récits conspirationnistes.</p>
           <a class="link" href="https://www.youtube.com/playlist?list=PLjzrEyZoLrso6n-zhX1NCFx4RM1GX_YVz" target="_blank" rel="noopener">Regarder&nbsp;→</a>
         </article>
-        <!-- Internet — Une infographie card -->
+        <!-- Internet — Une infographie card -->
         <article class="card">
           <a href="https://www.cnrseditions.fr/catalogue/societe/internet/" target="_blank" rel="noopener">
-            <img src="internet_infographie_cnrs.png" alt="Internet — Une infographie" />
+            <img src="internet_infographie_cnrs.png" alt="Internet — Une infographie" />
           </a>
-          <h3>Internet — Une infographie</h3>
-          <p>Ouvrage publié chez CNRS Éditions qui explore l’impact du numérique sur nos sociétés à travers des infographies.</p>
+          <h3>Internet — Une infographie</h3>
+          <p>Ouvrage publié chez CNRS Éditions qui explore l’impact du numérique sur nos sociétés à travers des infographies.</p>
           <a class="link" href="https://www.cnrseditions.fr/catalogue/societe/internet/" target="_blank" rel="noopener">Découvrir&nbsp;→</a>
         </article>
         <!-- CHIPIP card -->
-        <!-- Les Vérificateurs card -->
+        <!-- Les Vérificateurs card -->
         <article class="card">
           <a href="https://www.tf1info.fr/emissions/lci/verificateurs-14293/" target="_blank" rel="noopener">
-            <img src="lci.jpg" alt="Les Vérificateurs" />
+            <img src="lci.jpg" alt="Les Vérificateurs" />
           </a>
-          <h3>Les Vérificateurs</h3>
-          <p>Consultant pour l’émission&nbsp;« Les Vérificateurs » sur LCI qui vérifie les informations et lutte contre la désinformation.</p>
+          <h3>Les Vérificateurs</h3>
+          <p>Consultant pour l’émission&nbsp;« Les Vérificateurs » sur LCI qui vérifie les informations et lutte contre la désinformation.</p>
           <a class="link" href="https://www.tf1info.fr/emissions/lci/verificateurs-14293/" target="_blank" rel="noopener">Regarder&nbsp;→</a>
         </article>
         <!-- CHIPIP card -->
