--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
 
  <footer class="site-footer">
   <div class="container">
-    <p>© <span id="year"></span> Tristan — construit avec ChatGPT (mode Agent) & GitHub Pages 
+    <p>© <span id="year"></span> Tristan — vibecodé avec ChatGPT (mode Agent) & GitHub Pages 
       <span class="bouncer" aria-hidden="true">👾</span>
     </p>
   </div>
