a propos dans un box

--- a/index.html
+++ b/index.html
@@ -56,14 +56,13 @@
       border-radius: 8px;
     }
 
-        /* Style for about section band */
-        .about-section {
-          background-color: var(--surface);
-          padding: 2rem;
-          border-radius: 8px;
-          /* Reduce the space above the about section to tighten layout */
-          margin-top: 1rem;
-        }
+       .about-section {
+  background-color: var(--bg);   /* ou var(--surface) si tu veux un léger contraste */
+  border: 1px solid var(--border);
+  border-radius: 8px;            /* arrondi subtil */
+  padding: 1.5rem;
+  margin-top: 2rem;
+}
 
     /* Styles for embedded Google Form contact section */
         /* Styles for custom contact form */
@@ -232,7 +231,7 @@
     <section id="apropos" class="container section about-section">
       <h2>À propos</h2>
       <p>
-        Tristan Mendès France est maître de conférences associé en cultures numériques à l’Université de Paris et enseignant au CELSA. Spécialiste des cultures numériques et des radicalités en ligne, il coanime le podcast « Complorama » sur France Info, collabore à l’Observatoire du conspirationnisme (Conspiracy Watch) et participe à l’émission « Les Déconspirateurs ». Conférencier et consultant, il intervient sur l’impact du numérique et de l’intelligence artificielle, ainsi que sur l’extrémisme en ligne, et peut être contacté pour des interventions.
+        Maître de conférences associé en cultures numériques à l’Université Paris Cité et enseignant au CELSA, Tristan Mendès France est spécialiste des cultures numériques et des radicalités en ligne. Il coanime le podcast « Complorama » (France Info), collabore à Conspiracy Watch et participe à l’émission « Les Déconspirateurs ». Conférencier et consultant, il intervient sur l’impact du numérique, de l’IA et de l’extrémisme en ligne.
       </p>
     </section>
 
