--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
             <img src="complorama.jpg" alt="Complorama" />
           </a>
           <h3>Complorama</h3>
-          <p>Podcast de France&nbsp;Info qui explore le complotisme et les désinformations.</p>
+          <p>Podcast de France&nbsp;Info qui explore le complotisme et ses dynamiques.</p>
           <a class="link" href="https://www.radiofrance.fr/franceinfo/podcasts/complorama" target="_blank" rel="noopener">Écouter&nbsp;→</a>
         </article>
         <!-- Antidote chronicles card -->
@@ -253,7 +253,7 @@
             <img src="antidote.jpg" alt="Antidote" />
           </a>
           <h3>Antidote</h3>
-          <p>Chroniques sur France&nbsp;Inter qui analysent l’actualité de la désinformation.</p>
+          <p>Chroniques sur France&nbsp;Inter qui analysent l’actualité de la complosphère.</p>
           <a class="link" href="https://www.radiofrance.fr/franceinter/podcasts/antidote" target="_blank" rel="noopener">Découvrir&nbsp;→</a>
         </article>
         <!-- Observatoire du conspirationnisme card -->
@@ -304,10 +304,15 @@
         </article>
         <!-- Conférencier & Consultant card with distinct style -->
         <article class="card special">
-          <h3>Conférencier & Consultant</h3>
-          <p>Disponible pour des conférences et interventions sur les technologies numériques, les usages émergents et l’extrémisme en ligne.</p>
-          <a class="link" href="#contact">Me contacter&nbsp;→</a>
-        </article>
+  <h3>
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" width="28" height="28" style="vertical-align:middle; margin-right:8px;">
+      <path d="M12 14a3 3 0 0 0 3-3V5a3 3 0 0 0-6 0v6a3 3 0 0 0 3 3zm5-3a5 5 0 0 1-10 0H5a7 7 0 0 0 14 0h-2zM11 19v3h2v-3h-2z"/>
+    </svg>
+    Conférencier & Consultant
+  </h3>
+  <p>Disponible pour des conférences et interventions sur les technologies numériques, les usages émergents et l’extrémisme en ligne.</p>
+  <a class="link" href="#contact">Me contacter&nbsp;→</a>
+</article>
       </div>
     </section>
 
