--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <!-- Title updated to use Tristan -->
   <title>Portfolio — Tristan</title>
   <meta name="description" content="Portfolio — projets, bio et contacts." />
+  <link rel="icon" type="image/png" href="/avatar.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
