--- a/index.html
+++ b/index.html
@@ -326,27 +326,33 @@
     <!-- Original À propos section moved above the projects section and styled separately -->
 
     <section id="contact" class="container section">
-      <h2>Contact</h2>
-      <p>Envoyez‑moi un message&nbsp;:</p>
-      <!-- Use FormSubmit to send the message without exposing the email address -->
-      <!-- Add target and onsubmit handler so the submission loads into a hidden iframe and displays a thank‑you message on the same page -->
-      <form class="contact-form" action="https://formsubmit.co/betatristan@gmail.com" method="POST" target="hidden_iframe" onsubmit="this.style.display='none'; document.getElementById('formSuccess').style.display='block';">
-        <input type="email" name="email" placeholder="Votre email" required>
-        <textarea name="message" placeholder="Votre message" rows="5" required></textarea>
-        <div class="hidden-field" aria-hidden="true">
-          <label for="website">Laissez ce champ vide</label>
-          <input type="text" id="website" name="_honey" tabindex="-1" autocomplete="off">
-        </div>
-        <!-- Hidden fields for FormSubmit configuration -->
-        <input type="hidden" name="_subject" value="Message depuis le portfolio">
-        <input type="hidden" name="_captcha" value="true">
-        <button type="submit" class="btn">Envoyer</button>
-      </form>
-      <!-- Hidden iframe to capture the FormSubmit response and prevent page navigation -->
-      <iframe name="hidden_iframe" style="display:none;"></iframe>
-      <!-- Success message displayed after the form has been submitted -->
-      <p id="formSuccess" class="success-message" style="display:none; margin-top:1rem;">Merci&nbsp;! Votre message a été envoyé.</p>
-    </section>
+  <h2>Contact</h2>
+  <p>Envoyez-moi un message&nbsp;:</p>
+
+  <form class="contact-form"
+        action="https://formsubmit.co/betatristan@gmail.com"
+        method="POST">
+    <input type="text"  name="name"  placeholder="Votre nom" required>
+    <input type="email" name="email" placeholder="Votre email" required>
+    <textarea name="message" placeholder="Votre message" rows="5" required></textarea>
+
+    <!-- anti-bot -->
+    <div class="hidden-field" aria-hidden="true">
+      <label for="website">Laissez ce champ vide</label>
+      <input type="text" id="website" name="_honey" tabindex="-1" autocomplete="off">
+    </div>
+
+    <!-- options FormSubmit -->
+    <input type="hidden" name="_subject" value="Message depuis le portfolio">
+    <input type="hidden" name="_captcha" value="false">
+    <input type="hidden" name="_next" value="https://tristan.pro/merci.html">
+    <!-- optionnel: réponse auto
+    <input type="hidden" name="_autoresponse" value="Merci, bien reçu.">
+    -->
+
+    <button type="submit" class="btn">Envoyer</button>
+  </form>
+</section>
   </main>
 
  <footer class="site-footer">
