--- a/index.html
+++ b/index.html
@@ -384,28 +384,25 @@
   </style>
 
   <script>
-  // Fonction unique pour les deux boutons
-  (function(){
-    const user = 'prodige-clairs.4p';
-    const host = 'icloud.com';
-    const to = user + '@' + host;
-    const subject = encodeURIComponent('Contact depuis Tristan.pro');
-    const body = encodeURIComponent('Bonjour,\n\nJe vous contacte depuis tristan.pro au sujet de :\n');
+(function(){
+  const user = 'prodige-clairs.4p';
+  const host = 'icloud.com';
+  const to = user + '@' + host;
+  const subject = encodeURIComponent('Contact depuis Tristan.pro');
+  const body = encodeURIComponent('Bonjour,\n\nJe vous contacte depuis tristan.pro au sujet de :\n');
 
-    function openMail(){
-      window.location.href = 'mailto:' + to + '?subject=' + subject + '&body=' + body;
-    }
+  function openMail(){
+    window.location.href = 'mailto:' + to + '?subject=' + subject + '&body=' + body;
+  }
 
-    const btn = document.getElementById('mailBtn');
-    if (btn) btn.addEventListener('click', openMail);
+  // bouton du bas
+  const btn = document.getElementById('mailBtn');
+  if (btn) btn.addEventListener('click', openMail);
 
-    const link = document.querySelector('.btn.btn-ghost[href="#contact"]');
-    if (link) {
-      link.id = 'mailLink';
-      link.removeAttribute('href');
-      link.addEventListener('click', openMail);
-    }
-  })();
-  </script>
+  // bouton du haut
+  const link = document.getElementById('mailLink');
+  if (link) link.addEventListener('click', openMail);
+})();
+</script>
 </body>
 </html>
