--- a/index.html
+++ b/index.html
@@ -221,6 +221,7 @@
       display: inline-block;
       background: linear-gradient(to right, #fff, rgba(255,255,255,0.5));
       -webkit-background-clip: text;
+      background-clip: text;
       -webkit-text-fill-color: transparent;
     }
 
