--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
       border: 1px solid rgba(255,255,255,0.2);
     }
 
-    /* --- CTA PILL --- */
+    /* --- CTA PILL (aligné visuellement sur le contact du bas) --- */
     .cta-group { 
       display: flex; 
       gap: 1rem; 
@@ -208,22 +208,22 @@
       justify-content: center;
       padding: 0.9rem 1.8rem;
       border-radius: 999px;
-      border: 1px solid rgba(148, 163, 184, 0.6);      /* plus lisible */
-      background: rgba(15, 23, 42, 0.75);              /* un peu plus clair que le fond */
-      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.65);
+      border: 1px solid var(--glass-border);
+      background: rgba(255,255,255,0.03);
+      box-shadow: 0 10px 30px rgba(0,0,0,0.4);
       cursor: pointer;
       transition: all 0.3s var(--ease-out);
-      backdrop-filter: blur(14px);
-      -webkit-backdrop-filter: blur(14px);
+      backdrop-filter: blur(18px);
+      -webkit-backdrop-filter: blur(18px);
       position: relative;
       overflow: hidden;
     }
 
     .pill-cta:hover {
-      transform: translateY(-3px);
+      transform: translateY(-4px);
       border-color: var(--glass-highlight);
-      background: rgba(15, 23, 42, 0.9);
-      box-shadow: 0 16px 40px rgba(0, 0, 0, 0.8);
+      background: rgba(255,255,255,0.06);
+      box-shadow: 0 18px 40px rgba(0,0,0,0.55);
     }
 
     .pill-label {
@@ -238,7 +238,7 @@
       color: #ffffff;
     }
 
-    /* Anciennes classes de boutons (utilisées pour le CTA contact) */
+    /* Anciennes classes de boutons (utilisées pour le CTA contact dans les cartes si besoin) */
     .btn {
       display: inline-flex;
       align-items: center;
