mise à la ligne colloque

--- a/index.html
+++ b/index.html
@@ -727,7 +727,7 @@
             <h3 style="justify-content:center;">Interventions & conférences</h3>
             <p>
               J'interviens sur les innovations numériques, la désinformation et les radicalités en ligne. 
-              <a href="#contact" class="inline-contact-link">Me contacter pour une intervention</a>.
+              <br><a href="#contact" class="inline-contact-link">Me contacter pour une intervention</a>.
             </p>
           </div>
         </article>
